force-app/main/default/objects/Account/fields/Industry_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_NAICS_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The industry NAICS code that the business is in.</description>
    <label>Industry NAICS Code</label>
    <referenceTo>Industry_Fund__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>