force-app/main/default/objects/Account/fields/Total_Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Funded__c</fullName>
    <label>Total Amount Funded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>