force-app/main/default/objects/Account/fields/Type_of_Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work_Category__c</fullName>
    <description>The type of work category the business is in.</description>
    <inlineHelpText>Select the work category the applicant&apos;s business is in.</inlineHelpText>
    <label>Type of Work - Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Work_Category_GLOBAL</valueSetName>
    </valueSet>
</CustomField>